Fixed chart loader text not being aligned properly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,7 +89,7 @@ a#back-to-top {
   margin-bottom: 5px;
 }
 
-#loader {
+#chartLoader {
   text-align: center;
 }
 
